<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="mm_button_text1">Spotify Streamer</string>
    <string name="mm_button_text2">Football Scores</string>
    <string name="mm_button_text3">Library App</string>
    <string name="mm_button_text4">Build It Bigger</string>
    <string name="mm_button_text5">XYZ Reader</string>
    <string name="mm_button_text6">Capstone</string>
</resources>
