<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text1"
        android:id="@+id/mm_button_1"
        android:onClick="displayToast" />
    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text2"
        android:id="@+id/mm_button_2"
        android:onClick="displayToast" />
    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text3"
        android:id="@+id/mm_button_3"
        android:onClick="displayToast" />
    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text4"
        android:id="@+id/mm_button_4"
        android:onClick="displayToast" />
    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text5"
        android:id="@+id/mm_button_5"
        android:onClick="displayToast" />
    <Button
        style="@style/AppTheme.MainMenuButton"
        android:text="@string/mm_button_text6"
        android:id="@+id/mm_button_6"
        android:onClick="displayToast" />

</LinearLayout>
